--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.17.0",
+    "cors": "^2.8.4",
     "express": "^4.15.0",
     "jquery": "^3.1.1",
     "mongoose": "^4.9.6",
